v3.12/_sources/dev_guide_op_round.rst
.. index:: pair: page; Round
.. _doxid-dev_guide_op_round:

Round
=====

General
~~~~~~~

Round operation rounds the values of a tensor to the nearest integer, element-wise.

Operation attributes
~~~~~~~~~~~~~~~~~~~~

Round operation does not support any attribute.

Execution arguments
~~~~~~~~~~~~~~~~~~~

The inputs and outputs must be provided according to below index order when constructing an operation.

Inputs
------

======  ==============  =====================  
Index   Argument Name   Required or Optional   
======  ==============  =====================  
0       ``src``         Required               
======  ==============  =====================

Outputs
-------

======  ==============  =====================  
Index   Argument Name   Required or Optional   
======  ==============  =====================  
0       ``dst``         Required               
======  ==============  =====================

Supported data types
~~~~~~~~~~~~~~~~~~~~

Round operation supports the following data type combinations.

=====  =====  
Src    Dst    
=====  =====  
f32    f32    
f16    f16    
bf16   bf16   
=====  =====

Implementation Notes
~~~~~~~~~~~~~~~~~~~~

Round supports in-place operations, meaning that ``src`` can be used as both input and output (``dst``). In case of in-place operation, the original ``src`` data will be overwritten. Use in-place operations whenever possible for performance.

